Fixed-19573: Alignment Issue when create a new email template admin.

--- a/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
+++ b/app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
@@ -122,7 +122,7 @@
         > .admin__field-control {
             #mix-grid .column(@field-control-grid__column, @field-grid__columns);
             .admin__field {
-                line-height: 3.2rem;
+                margin-top: 8px;
             }
         }
 
